Bug 123796 - Wrong cursor when inserting shape
Summary: Wrong cursor when inserting shape
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-03-01 23:20 UTC by Aron Budea
Modified: 2019-03-13 13:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2019-03-01 23:20:59 UTC
Start Writer, and start inserting a shape from the Drawing toolbar or using the button on the Standard toolbar.

Note how the cursor doesn't switch to the usual crosshair + caret combination, and stays like a regular mouse pointer.

This is a regression introduced by the following commit. Adding Cc: to Noel Grandin, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c5ac80d90ebcc1c3fad18ece8784ac2b36f52045
author		Noel Grandin <noel.grandin@collabora.co.uk>	2019-02-08 10:00:12 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-02-27 07:36:31 +0100

make cursor images part of the theme
Comment 1 Julien Nabet 2019-03-02 22:30:26 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2019-03-02 23:29:21 UTC
Noel: the problem is cursors aren't in colibre theme package.

Considering core/postprocess/CustomTarget_images.mk and solenv/bin/pack_images.py, it seems the only images taken into account for zip themes packages are either "res" (I suppose "ressource") or "cmd" ("command"), the rest seems ignored.
So doing this fixed the pb for me:
1) move icon-themes/colibre/vcl/cursors/* to icon-themes/colibre/vcl/res
to have icon-themes/colibre/vcl/res/cursors:*

2) in vcl/inc/bitmaps.hlst, replace all vcl/cursors/<file> by vcl/res/cursors/<file>

Any thoughts?
Comment 3 Julien Nabet 2019-03-04 07:41:29 UTC
Noel: any thoughts about https://bugs.documentfoundation.org/show_bug.cgi?id=123796#c2 ? Indeed, if it seems ok to you, I can submit a patch on gerrit.

(let's increase a bit the importance since it's a regression).
Comment 4 Noel Grandin 2019-03-04 13:59:13 UTC
thank you Julien for your analysis.

fix in progress here
   https://gerrit.libreoffice.org/68695
Comment 5 Commit Notification 2019-03-05 07:18:59 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/25d176ada67ada550bd4d0d08177c232cf7eeb37%5E%21

tdf#123796 Wrong cursor when inserting shape

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-03-13 13:27:57 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel Grandin, thanks for fixing this issue!!