tdf#123796 Wrong cursor when inserting shape

regression from
    commit c5ac80d90ebcc1c3fad18ece8784ac2b36f52045
	make cursor images part of the theme

Turns out that I can't put SVG files into a normal theme, only
colibre_svg is allowed to contain SVG files, so my idea of having only
one set of files is not going to fly. So make a copy of the PNG files
into the colibre theme, which is what everything currently falls back
to.

Change-Id: I5f04226da5c8b3d5db7e9807e845112b76b72f22
Reviewed-on: https://gerrit.libreoffice.org/68695
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>